--- a/202001046.md
+++ b/202001046.md
@@ -103,7 +103,74 @@ The system should accessible 24x7.
 The system should be developed using HTML 5. <br>
 The LIS has to be developed as a web application, which should work with Google Chrome, Firefox, Opera and other web browsers.
    
+<br><br>
+   
+# Q2:
+     
+   <br>
+   
+   <h3> Functional Requirements: </h3>
+   <br>
 
+   1. **Registration:**
+   
+The member who want to use the facilities of this app has to register with this app.They have to enter username and password for thier account. They have to use this information for any future deal in this app.
+   
+   2. **Login:**
+   
+ A registered user can login to the app by enter his username/email-ID and password. 
+   
+   **Unsuccessful Login:**  
+   
+   If user not registered then he can't access this app and message related to registration will be shown to use.  <br><br>
+   In case user forget password then the security question will be asked to use that is setted by user during registration , if user answer the security question correctly then new password will be sent to the mail address of user and by that user will relogin with the system and after that user can change password as well. If user can't answer the security question correctly then user's account will be locked and he needs to contact with the administrator to reactivate it.
+   
+   **Successful Login:**
+   
+   After successful login, user will be redirected to **Home Page** of app and from where he can use the different functionalities of this app.
+   
+   3. **Sound events:**
+   
+   This application provides features of below sound events:
+   
+   
+ - Car Horns
+ - Alarms
+ - Emergency Siren
+ - Doorbell
+ - Baby Crying etc.
+   
+ When above events happens, corresponding image will be displayed in home page of this application, So user can recognize these events correclty.
+   
+   4. **Phone Vibration:**
+   
+   
+   5. **Flash Light:**
+   
+   
+   6. **Duration:**
+   
+   <br><br>
+   
+  <h3> Non-Functional Requirements: </h3>
+   <br>
+   
+   1. **Security:**
+   
+The system should be accessible only within the institute LAN. <br>
+
+   
+   2. **Performance:**
+   
+The system should load as less as possible. <br>
+At least 100 users should be able to access the system altogether at any perticular same time.  <br>
+The system should accessible 24x7.
+   
+  3. **Software Quality**
+  4. **Database**
+  5. **Maintainability**
+  <br>
+   
    
 
    
