--- a/202001046.md
+++ b/202001046.md
@@ -90,9 +90,10 @@ At least 100 users should be able to access the system altogether at any perticu
 The system should accessible 24x7.
    
   3. **Software Quality**
+   
   4. **Database**
+   
   5. **Maintainability**
-  <br>
    
   6. **Reliability:**
   
@@ -142,13 +143,17 @@ The member who want to use the facilities of this app has to register with this 
    
  When above events happens, corresponding image will be displayed in home page of this application, So user can recognize these events correclty.
    
-   4. **Phone Vibration:**
+   4. **Phone Vibration alert:**
    
+ Whenever event's image will be displayed in home screen, this app should give alert using phone vibration.
    
-   5. **Flash Light:**
+   5. **Flash Light alert:**
    
+ Whenever event's image will be displayed in home screen, this app should give alert using Flash Light.
    
    6. **Duration:**
+  
+  User can set duration of event's image.
    
    <br><br>
    
@@ -157,19 +162,26 @@ The member who want to use the facilities of this app has to register with this 
    
    1. **Security:**
    
-The system should be accessible only within the institute LAN. <br>
-
-   
    2. **Performance:**
    
-The system should load as less as possible. <br>
-At least 100 users should be able to access the system altogether at any perticular same time.  <br>
+The app should load as less as possible. <br>
+As many as possible user should be able to access the app altogether at any perticular same time.  <br>
 The system should accessible 24x7.
    
   3. **Software Quality**
+   
   4. **Database**
+   
   5. **Maintainability**
-  <br>
+   
+   6. **Reliability:**
+  
+  The system shouold be reliable to any device (mobile phones, PC, laptops, teblets etc.)
+   
+  7. **Design:**
+   
+  The design of this app should be very simple because user get confused if there will be lots of hierarchy.
+
    
    
 
