--- a/202001046.md
+++ b/202001046.md
@@ -160,7 +160,7 @@ The member who want to use the facilities of this app has to register with this 
   <h3> Non-Functional Requirements: </h3>
    <br>
    
-   1. **Security:**
+   1. **Security**
    
    2. **Performance:**
    
@@ -174,7 +174,7 @@ The system should accessible 24x7.
    
   5. **Maintainability**
    
-   6. **Reliability:**
+  6. **Reliability:**
   
   The system shouold be reliable to any device (mobile phones, PC, laptops, teblets etc.)
    
