--- a/202001046.md
+++ b/202001046.md
@@ -107,7 +107,11 @@ The LIS has to be developed as a web application, which should work with Google 
 <br><br>
    
 # Q2:
-     
+   
+   <h3> Scope: </h3>
+    
+ The main scope of the project is to develop an application using Artificial Intelligence for the people suffering from hearing loss. It will be mainly beneficial to fulfill their daily needs of safe travel and communication. As they are approximately 5% of the total world population, this application would have a huge user database as it will be for the betterment of the society. It will be a very impactful solution as it would be a real time based system and a medium of interaction between user and surroundings.
+   
    <br>
    
    <h3> Functional Requirements: </h3>
